debugging failing tests
Signed-off-by: Ogenbertrand <ogenbertrand@gmail.com>